# ofxstatement-qif

./: .gitignore  CHANGELOG.md  Makefile  README.md  cog.toml  prospector.yaml  pyproject.toml
.github/workflows/: ptest.yaml  publish.yaml  release.yaml  tag.yaml  test.yaml
src/ofxstatement/plugins/: qif.py
src/ofxstatement_qif/: plugin.py
src/test/: test_get_transaction_type.py  test_parse_qif_file.py
