[project]
name = "ofxstatement-qif"
dynamic = ["version"]
authors = [
    {name = "R Vadai", email = "rvadai@segence.com"},
]
description = "ofxstatement plugin for QIF files"
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "quiffen==4.0.1"
]
[project.optional-dependencies]
dev = [
    "ofxstatement==0.9.3",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "prospector[with_mypy]==1.18.0",
    "bandit==1.9.4",
    "setuptools==82.0.1",
    "build==1.4.2",
    "black==26.3.1"
]
[project.urls]
repository = "https://github.com/robvadai/ofxstatement-qif"
[project.entry-points."ofxstatement"]
qif = "ofxstatement_qif.plugin:QIFPlugin"
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]
[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "integration: marks tests as integration tests",
]
[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
